--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "18.2.0",
     "react-google-charts": "^4.0.0",
     "react-icons": "^4.7.1",
-    "recharts": "^2.3.2"
+    "recharts": "^2.3.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
